--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@auth0/angular-jwt": "^5.0.1",
     "angular2-flash-messages": "^3.0.1",
+    "jwt-decode": "^3.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
